syntax = "proto3";
import "src/table_store/proto/schema.proto";

package pl.carnot.queryresultspb;

option go_package = "queryresultspb";

// Tracks information about query execution time.
message QueryTimingInfo {
  // The total execution time for the query in nanoseconds.
  int64 execution_time_ns = 1;
  // The time in ns spent compiling the query.
  int64 compilation_time_ns = 2;
}

// QueryExecutionStats contains information about the time/data processed by the
// query.
message QueryExecutionStats {
  QueryTimingInfo timing = 1;
  // The number of input bytes.
  int64 bytes_processed = 2;
  // The number of input records.
  int64 records_processed = 3;
}

message OperatorExecutionStats {
  // The id of the plan fragment containing this operator.
  int64 plan_fragment_id = 1;
  // The id of the operator node within the plan fragment.
  int64 node_id = 2;
  // The number of output bytes.
  int64 bytes_output = 3;
  // The number of output records.
  int64 records_output = 4;
  // The total elapsed time on this operator.
  int64 total_execution_time_ns = 5;
  // The elapsed time of this operator by itself.
  int64 self_execution_time_ns = 6;
}

// The query results generated by carnot.
message QueryResult {
  repeated pl.table_store.schemapb.Table tables = 1;
  QueryTimingInfo timing_info = 2;
  QueryExecutionStats execution_stats = 3;
  repeated OperatorExecutionStats operator_execution_stats = 4;
}
